<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_data_interested"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/edtNameInterested"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_field_hint"/>

        <EditText
            android:id="@+id/edtEMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_field_hint"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">


            <Button
                android:id="@+id/buttonOk"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:drawableStart="@drawable/ic_yes"
                android:text="@string/button_ok_text"/>

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:drawableStart="@drawable/ic_no"
                android:text="@string/button_cancel_text"/>

        </LinearLayout>
    </LinearLayout>
</layout>